--- a/src/components/portfolio/portfolio-item.module.css
+++ b/src/components/portfolio/portfolio-item.module.css
@@ -2,11 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	flex: 1 1 28%;
-	min-width: 15rem;
-	max-width: 25rem;
+	justify-content: center;
+	align-items: center;
+	min-width: 13rem;
+	max-width: 15rem;
 	min-height: 15rem;
 	margin: 1.2vw;
+	border-radius: 1rem;
 	background: var(--dark-1);
+	transition: background 0.2s ease-in-out, opacity 0.2s ease-in-out;
+}
+
+.portfolio-item:hover {
+	background: var(--mid-1);
+	opacity: 0.9;
 }
 
 .item-title {
@@ -16,37 +25,11 @@
 
 .item-summary {
 	flex: 1 0 auto;
-	padding: 0.5rem;
+	padding: 1rem;
+	text-align: center;
 	font-size: 0.9rem;
 }
-
-.item-link {
-	text-align: center;
-}
-
-.item-link a {
-	padding: 0.5rem 0.5rem 0 0.5rem;
-	background: var(--mid-2);
-	font-size: 1.1rem;
-	color: var(--dark-1);
-	text-decoration: none;
-	transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.item-link a:hover {
-	background: var(--dark-1);
-	color: var(--light-1);
-}
-
 .item-image-container {
-	min-width: 10rem;
-	min-height: 10rem;
-	width: 100%;
-	height: 100%;
-	background: black;
+	display: flex;
+	padding: 1rem;
 }
-/* .item-image-container * {
-	min-width: 10rem;
-	min-height: 10rem;
-	background: black;
-} */
