--- a/src/components/portfolio/portfolio-section.module.css
+++ b/src/components/portfolio/portfolio-section.module.css
@@ -1,5 +1,16 @@
 .portfolio-section-container {
+	flex: 1 1 auto;
 	display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
+	min-height: 100%;
+}
+
+.portfolio-items {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
 }
